<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="345dp"
        android:layout_height="429dp"
        app:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rowCount="5">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_clear"
            style="@style/numbers_button_style"
            android:background="@drawable/button_border"
            android:text="@string/clear_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_convert"
            style="@style/numbers_button_style"
            android:background="@drawable/button_border"
            android:text="@string/convert_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_percent"
            style="@style/numbers_button_style"
            android:background="@drawable/button_border"
            android:text="@string/percent_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_division"
            style="@style/numbers_button_style"
            android:background="@drawable/operation_border"
            android:text="@string/div_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_seven"
            style="@style/numbers_button_style"
            android:background="@drawable/numbers_button"
            android:text="@string/seven_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_eight"
            style="@style/numbers_button_style"
            android:background="@drawable/numbers_button"
            android:text="@string/eight_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_nine"
            style="@style/numbers_button_style"
            android:background="@drawable/numbers_button"
            android:text="@string/nine_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_multiplication"
            style="@style/numbers_button_style"
            android:background="@drawable/operation_border"
            android:text="@string/mul_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_four"
            style="@style/numbers_button_style"
            android:background="@drawable/numbers_button"
            android:text="@string/four_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_five"
            style="@style/numbers_button_style"
            android:background="@drawable/numbers_button"
            android:text="@string/five_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_six"
            style="@style/numbers_button_style"
            android:background="@drawable/numbers_button"
            android:onClick="getButtonText"
            android:text="@string/six_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_subtraction"
            style="@style/numbers_button_style"
            android:background="@drawable/operation_border"
            android:onClick="getButtonText"
            android:text="@string/sub_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_one"
            style="@style/numbers_button_style"
            android:background="@drawable/numbers_button"
            android:onClick="getButtonText"
            android:text="@string/one_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_two"
            style="@style/numbers_button_style"
            android:background="@drawable/numbers_button"
            android:text="@string/two_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_three"
            style="@style/numbers_button_style"
            android:background="@drawable/numbers_button"
            android:text="@string/three_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_summation"
            style="@style/numbers_button_style"
            android:background="@drawable/operation_border"
            android:text="@string/sum_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_zero"
            style="@style/numbers_button_style"
            android:background="@drawable/numbers_button"
            android:text="@string/zero_button"
            android:textAppearance="@style/text_style"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_dot"
            style="@style/numbers_button_style"
            android:background="@drawable/numbers_button"
            android:text="@string/dot_button"
            android:textAppearance="@style/text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_equal"
            style="@style/numbers_button_style"
            android:background="@drawable/operation_border"
            android:text="@string/equal_button"
            android:textAppearance="@style/text_style" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/calculate"
        android:layout_width="191dp"
        android:layout_height="53dp"
        android:hint="0"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>